k8s/deployment.yaml
# This YAML file defines a Kubernetes Deployment for an application called "hello-flask".
# It specifies that two replicas (pods) of the app should run, each using the Docker image `hello-flask:0.1`.
# The deployment manages pods with the label `app: hello-flask`, exposes port 5000, and includes a readiness probe
# that checks the root path ("/") on port 5000 to determine if the app is ready to receive traffic.
# This setup is used to deploy and manage a scalable, self-healing instance of your Flask app in a Kubernetes cluster.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flask
  labels:
    app: hello-flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-flask
  template:
    metadata:
      labels:
        app: hello-flask
    spec:
      containers:
      - name: hello-flask
        image: hello-flask:latest
        # Force Kubernetes to use the local image
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 2
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        # --- Add configuration injection here ---
